// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`and 1`] = `
ParseOK {
  "value": Array [
    "x",
    "y",
  ],
}
`;

exports[`and failure 1`] = `
ParseFail {
  "expected": Array [
    "y",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`and failure 2`] = `
ParseFail {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`and failure 3`] = `
ParseFail {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`and failure 4`] = `
ParseFail {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`and success triple 2 1`] = `
ParseOK {
  "value": Array [
    "x",
    "y",
    "z",
  ],
}
`;

exports[`and triple 1`] = `
ParseOK {
  "value": Array [
    Array [
      "x",
      "y",
    ],
    "z",
  ],
}
`;

exports[`desc 1`] = `
ParseOK {
  "value": 9,
}
`;

exports[`desc 2`] = `
ParseFail {
  "expected": Array [
    "number",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`emoji length 1`] = `
ParseOK {
  "value": Object {
    "end": Object {
      "column": 4,
      "index": 6,
      "line": 1,
    },
    "name": "Emoji",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "🙂🙂🙂",
  },
}
`;

exports[`fail 1`] = `
ParseFail {
  "expected": Array [
    "apple",
    "banana",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`fail 2`] = `
ParseFail {
  "expected": Array [
    "apple",
    "banana",
    "other",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`language 1`] = `
ParseOK {
  "value": Array [
    "x",
    "x",
    Array [
      "x",
      Array [],
      Array [
        "x",
      ],
      Array [
        Array [
          "x",
        ],
      ],
      "x",
    ],
    "x",
  ],
}
`;

exports[`lazy 1`] = `
ParseOK {
  "value": Array [
    "x",
    "x",
    Array [
      "x",
      Array [],
      Array [
        "x",
      ],
      Array [
        Array [
          "x",
        ],
      ],
      "x",
    ],
    "x",
  ],
}
`;

exports[`lisp lists 1`] = `
ParseOK {
  "value": Array [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`many0 1`] = `
ParseOK {
  "value": Array [],
}
`;

exports[`many0 2`] = `
ParseOK {
  "value": Array [
    "a",
  ],
}
`;

exports[`many0 3`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`many0 4`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many0 5`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many0 6`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`many1 1`] = `
ParseOK {
  "value": Array [
    "a",
  ],
}
`;

exports[`many1 2`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`many1 3`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many1 4`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many1 5`] = `
ParseOK {
  "value": Array [],
}
`;

exports[`many1 6`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`match 1`] = `
ParseOK {
  "value": "12",
}
`;

exports[`match 2`] = `
ParseFail {
  "expected": Array [
    "/\\\\d+/",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`matchEOF 1`] = `
ParseOK {
  "value": "<EOF>",
}
`;

exports[`matchEOF 2`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`node 1`] = `
ParseOK {
  "value": Object {
    "end": Object {
      "column": 4,
      "index": 3,
      "line": 1,
    },
    "name": "Identifier",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "abc",
  },
}
`;

exports[`node 2`] = `
ParseOK {
  "value": Object {
    "end": Object {
      "column": 2,
      "index": 5,
      "line": 3,
    },
    "name": "ABC",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "A
B
C",
  },
}
`;

exports[`or 1`] = `
ParseOK {
  "value": "a",
}
`;

exports[`or 2`] = `
ParseOK {
  "value": "b",
}
`;

exports[`or 3`] = `
ParseFail {
  "expected": Array [
    "a",
    "b",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`or 4`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`or 5`] = `
ParseFail {
  "expected": Array [
    "a",
    "b",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sepBy0 1`] = `
ParseOK {
  "value": Array [],
}
`;

exports[`sepBy0 2`] = `
ParseOK {
  "value": Array [
    "a",
  ],
}
`;

exports[`sepBy0 3`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`sepBy0 4`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`sepBy0 5`] = `
ParseFail {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sepBy0 6`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sepBy1 1`] = `
ParseFail {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sepBy1 2`] = `
ParseOK {
  "value": Array [
    "a",
  ],
}
`;

exports[`sepBy1 3`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`sepBy1 4`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`sepBy1 5`] = `
ParseFail {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sepBy1 6`] = `
ParseFail {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`test a test 1`] = `
ParseOK {
  "value": "x",
}
`;

exports[`trim 1`] = `
ParseOK {
  "value": "x",
}
`;

exports[`trim 2`] = `
ParseFail {
  "expected": Array [
    "~",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`trim 3`] = `
ParseFail {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`trim 4`] = `
ParseFail {
  "expected": Array [
    "~",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`wrap 1`] = `
ParseOK {
  "value": "x",
}
`;

exports[`wrap 2`] = `
ParseFail {
  "expected": Array [
    ">",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`wrap 3`] = `
ParseFail {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`wrap 4`] = `
ParseFail {
  "expected": Array [
    "<",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
